// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writes entry points to disk: assets/content1.esm-wrapper-8914532e.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content1.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`writes entry points to disk: assets/content2.esm-wrapper-c8db90d0.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content2.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`writes entry points to disk: content1.js 1`] = `
"var icon = \\"/assets/image.51f8fe9d.png\\";
var script = \\"script.js\\";
console.log(\\"content.ts\\", { icon, script });
"
`;

exports[`writes entry points to disk: content2.js 1`] = `
"var html = \\"iframe.html\\";
var font = \\"/assets/font.bb6bc8d6.otf\\";
console.log(\\"content2.ts\\", { html, font });
"
`;

exports[`writes entry points to disk: iframe.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
    <script type=\\"module\\" src=\\"/@vite/client\\"></script>

    <meta charset=\\"UTF-8\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Document</title>
  </head>
  <body>
    IFR
  

</body></html>"
`;

exports[`writes entry points to disk: manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "crx-hmr-service-worker.js",
    "type": "module",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "runtime-reloader--content-script.js",
        "assets/content1.esm-wrapper-8914532e.js",
      ],
      "matches": Array [
        "https://google.com/*",
      ],
    },
    Object {
      "js": Array [
        "runtime-reloader--content-script.js",
        "assets/content2.esm-wrapper-c8db90d0.js",
      ],
      "matches": Array [
        "https://bing.com/*",
      ],
    },
  ],
  "description": "DEVELOPMENT build with simple auto-reloader
[6:00:00 PM] Waiting for changes...",
  "manifest_version": 3,
  "name": "Test",
  "permissions": Array [],
  "version": "1.0.0",
  "version_name": "2021-12-07T00:00:00.000Z",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://google.com/*",
      ],
      "resources": Array [
        "assets/image.51f8fe9d.png",
        "script.js",
        "content1.js",
      ],
    },
    Object {
      "matches": Array [
        "https://bing.com/*",
      ],
      "resources": Array [
        "assets/font.bb6bc8d6.otf",
        "iframe.html",
        "content2.js",
      ],
    },
  ],
}
`;

exports[`writes entry points to disk: script.js 1`] = `
"console.log(\\"main world script\\");
"
`;
